# gemini-semantic-rag

./: README.md  Readme.txt  main.py  pyproject.toml  requirements.txt
chroma_db/: chroma.sqlite3
