[project]
name = "learing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "langchain[google-genai]>=1.2.3",
    "langchain-community>=0.4.1",
    "langchain-text-splitters>=1.1.0",
    "google-genai>=1.57.0",
    "langchain-google-genai>=4.1.3",
    "langchain-milvus>=0.3.3",
    "langchain-experimental>=0.4.1",
    "pypdf>=6.5.0",
    "pymilvus>=2.6.6",
    "pinecone>=8.0.0",
    "ipykernel>=7.1.0",
    "unstructured>=0.18.27",
    "tiktoken>=0.12.0",
    "python-dotenv>=1.2.1",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
]
